Fix spacing in masthead breadcrumbs

--- a/_sass/template/partials/_web-masthead.scss
+++ b/_sass/template/partials/_web-masthead.scss
@@ -70,10 +70,10 @@ $web-masthead: true !default;
                 display: none; // hide masthead breadcrumbs as mobile-first default
                 vertical-align: middle;
 
-                @media only screen and (min-width: $max-width-default) {
+                @media only screen and (min-width: $break-width-small) {
                     align-items: center;
                     display: inline-flex;
-                    margin: 0 0.5em 0 0;
+                    margin: 0 0.25em 0 0;
 
                     // The divider between project and book title
                     // Should not show if there is only one work,
